[package]
name = "camloc-server"
version = "0.4.0"
authors = ["Kris030"]
edition = "2021"
description = "A DIY GPS for a dank engine."
repository = "https://github.com/Kris030/camloc-server"
exclude = ["test/"]

[dependencies]
roblib-parsing = { git = "https://github.com/kareszklub/roblib-rs", optional = true }
roblib-macro = { git = "https://github.com/kareszklub/roblib-rs", optional = true }
tokio-serial = { version = "5.4", optional = true, features = ["libudev"] }
camloc-common = { git = "https://github.com/Kris030/camloc-common" }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
anyhow = "1"

[features]
default = []

all = ["serial-compass", "roblib-parsing"]

serial-compass = ["dep:tokio-serial"]
roblib-parsing = ["dep:roblib-parsing", "dep:roblib-macro"]
