[package]
name = "camloc-calibration-cli"
version = "0.1.0"
authors = ["danipatko", "Kris030"]
edition = "2021"
description = "A DIY camera calibration cli for a DIY GPS for a dank engine."
repository = "https://github.com/Kris030/camloc"
license = "MIT"

[dependencies]
camloc-common = { path = "../common", version = "0.2", features = ["cv"] }
clap = { version = "4.3.0", features = ["derive"] }
opencv = "0.84"
