[package]
name = "camloc-client"
version = "0.1.0"
authors = ["danipatko", "Kris030"]
edition = "2021"
description = "A DIY camera client for a DIY GPS for a dank engine."
repository = "https://github.com/Kris030/camloc"
license = "MIT"

[dependencies]
camloc-common = { path = "../common", version = "0.1", features = ["cv"] }
clap = { version = "4.3.0", features = ["derive"] }
opencv = "0.84"
anyhow = "1"
ctrlc = "3.4"
