[package]
name = "camloc-common"
version = "0.1.0"
authors = ["Kris030", "danipatko"]
edition = "2021"
description = "A DIY commons library for a DIY GPS for a dank engine."
repository = "https://github.com/Kris030/camloc"
exclude = ["protocol.txt"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
opencv = { version = "0.84", optional = true }
anyhow = "1"

[features]
default = []

all = ["cv", "serde"]

serde = ["dep:serde"]
cv = ["dep:opencv"]
