[package]
name = "camloc-server"
version = "0.2.1"
authors = ["Kris030"]
edition = "2021"
description = "A DIY GPS for a dank engine."
repository = "https://github.com/Kris030/camloc"
exclude = ["test/"]
license = "MIT"

[dependencies]
tokio-serial = { version = "5.4", optional = true, features = ["libudev"] }
serde = { version = "1", optional = true, features = ["derive"] }
camloc-common = { path = "../common", version = "0.2" }
tokio = { version = "1.28", features = ["full"] }
tokio-util = "0.7.8"
async-trait = "0.1"
futures = "0.3"
anyhow = "1"

[features]
default = []

all = ["serial-compass", "serde"]

serial-compass = ["dep:tokio-serial"]
serde = ["dep:serde", "camloc-common/serde"]
